--- a/installdialog.ui
+++ b/installdialog.ui
@@ -10,6 +10,12 @@
     <height>300</height>
    </rect>
   </property>
+  <property name="cursor">
+   <cursorShape>BusyCursor</cursorShape>
+  </property>
+  <property name="mouseTracking">
+   <bool>true</bool>
+  </property>
   <property name="windowTitle">
    <string>Installation Progress</string>
   </property>
